Stations: Fix station name moving when editing on Firefox

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -491,6 +491,10 @@ div.running-text{
     margin: 8px auto;
 }
 
+#os-stations .ui-controlgroup {
+    display: block;
+}
+
 /* Status page rules */
 
 #status_list .ui-li {
